<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:background="@drawable/background">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/home"
            android:textColor="@color/abu"
            android:textSize="26sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/judul"
        android:background="@drawable/roundedbg"
        android:layout_marginBottom="50dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:text="@string/profile"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    tools:ignore="RtlHardcoded" />

                <ImageView
                    android:id="@+id/imageList"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:src="@drawable/syifa"
                   />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/syifa"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/poppins_light"
                    android:gravity="left"
                    android:text="@string/descsyifa"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:text="@string/interest"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    tools:ignore="RtlHardcoded" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="30dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/hobi"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_light"
                            android:text="@string/kulineran"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/makas"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_light"
                            android:text="@string/soto"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/mikes"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_light"
                            android:text="@string/chocodrink"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/interest"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_light"
                            android:text="@string/data_sciens"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/cita_cita"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_light"
                            android:text="@string/project_manager"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>
                </TableLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>