<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_margin="2dp"
        android:background="@color/white"
        card_view:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white">
            <ImageView
                android:id="@+id/dailyimg"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:padding="10dp"
                android:layout_marginEnd="6dip"
                android:contentDescription="@string/todo"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/daily_subhead"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/daily_headline"
                android:fontFamily="@font/poppins_light"
                android:layout_toEndOf="@id/dailyimg"
                android:textColor="@android:color/black"
                android:text="@string/desc"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/daily_headline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/dailyimg"
                android:fontFamily="@font/poppins_light"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:paddingTop="10dp"
                android:text="@string/example_application"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>