<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:background="@drawable/background">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/profile"
            android:textColor="@color/abu"
            android:textSize="26sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/judul"
        android:background="@drawable/roundedbg"
        android:layout_marginBottom="50dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:gravity="center"
                    tools:ignore="RtlHardcoded" />

                <ImageView
                    android:id="@+id/imageList"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/syifa"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/syifa"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/poppins_light"
                    android:gravity="left"
                    android:text="@string/descsyifa"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:fontFamily="@font/poppins_light"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    tools:ignore="RtlHardcoded" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:orientation="horizontal">
                    <ImageButton
                        android:id="@+id/btn_dial_number"
                        android:src="@drawable/whatsapp"
                        android:background="#00000000"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo" />

                    <ImageButton
                        android:id="@+id/btn_email"
                        android:src="@drawable/gmail"
                        android:background="#00000000"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo" />

                    <ImageButton
                        android:id="@+id/btn_ig"
                        android:src="@drawable/instagram"
                        android:background="#00000000"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/find_me"
                    android:fontFamily="@font/poppins_light"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    tools:ignore="RtlHardcoded" />

                <ImageButton
                    android:id="@+id/btn_map"
                    android:src="@drawable/map"
                    android:background="#00000000"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:fontFamily="@font/poppins_light"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/buttonSucces"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="11sp"
                    android:layout_marginBottom="30dp"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_transparent"
                    android:drawableStart="@drawable/about"
                    android:text="@string/about_version_application"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>